chore: add tauri globals

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -29,6 +29,7 @@
         "@tauri-apps/plugin-dialog": "2.4.2",
         "@tauri-apps/plugin-log": "2.7.1",
         "@tauri-apps/plugin-opener": "2.5.2",
+        "@tauri-apps/plugin-store": "2.4.1",
         "clsx": "2.1.1",
         "marked": "17.0.1",
         "mitt": "3.0.1",
