--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "pnpm": {
         "onlyBuiltDependencies": [
+            "@fortawesome/fontawesome-free",
             "@swc/core",
             "esbuild"
         ]
@@ -19,12 +20,12 @@
     "dependencies": {
         "@fontsource/roboto": "5.2.9",
         "@fontsource/roboto-mono": "5.2.8",
+        "@fortawesome/fontawesome-free": "5.15.4",
         "@mantine/core": "8.3.10",
         "@mantine/form": "8.3.10",
         "@mantine/hooks": "8.3.10",
         "@mantine/modals": "8.3.10",
         "@mantine/notifications": "8.3.10",
-        "@tabler/icons-react": "3.35.0",
         "@tauri-apps/api": "2.9.1",
         "@tauri-apps/plugin-dialog": "2.4.2",
         "@tauri-apps/plugin-log": "2.7.1",
