--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ base64 = "0.22.1"
 futures = "0.3.31"
 infer = "0.19.0"
 log = "0.4.29"
-mlua = { version = "0.11.5", features = ["lua54", "vendored", "serde"] }
+mlua = { version = "0.11.5", features = ["lua54", "vendored", "serde", "send"] }
 moka = { version = "0.12.11", features = ["sync"] }
 rand = "0.9.2"
 regex = "1.12.2"
