--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ ureq = { version = "3.1.4", default-features = false, features = ["json", "nativ
 [dependencies]
 actix-web = "4.12.1"
 actix-ws = "0.3.0"
+anyhow = { version = "1.0.100", features = ["backtrace"] }
 base64 = "0.22.1"
 futures = "0.3.31"
 infer = "0.19.0"
@@ -41,7 +42,6 @@ tauri-plugin-dialog = "2.4.2"
 tauri-plugin-log = "2.7.1"
 tauri-plugin-opener = "2.5.2"
 tauri-plugin-store = "2.4.1"
-thiserror = "2.0.17"
 time = "0.3.44"
 tokio = { version = "1.48.0", features = ["full"] }
 ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }
