--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,4 @@ tauri-plugin-store = "2.4.1"
 tokio = { version = "1.48.0", features = ["full"] }
 ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }
 url = { version = "2.5.7", features = ["serde"] }
+if-addrs = "0.14.0"
