--- a/webapp/package.json
+++ b/webapp/package.json
@@ -35,6 +35,7 @@
         "marked": "17.0.1",
         "mitt": "3.0.1",
         "polished": "4.3.1",
+        "qrcode.react": "4.2.0",
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "semver": "7.7.3",
