--- a/plugins/plugin-kick/manifest.yaml
+++ b/plugins/plugin-kick/manifest.yaml
@@ -2,7 +2,7 @@ name: plugin-kick
 description: Kick integration plugin for UniChat
 version: ${unichat_version}
 author: ${unichat_authors}
-license: ${unichat_license}
+license: MIT
 homepage: ${unichat_homepage}
 dependencies:
   - unichat@[1.4.0-alpha.2,)
