--- a/src/actix/static/index.html.template
+++ b/src/actix/static/index.html.template
@@ -43,6 +43,8 @@
                             }
                         } else if (event.type === "unichat:user_store_update") {
                             window.dispatchEvent(new CustomEvent("unichat:user_store_update", { detail: event.data }));
+                        } else if (event.type === "unichat:user_store_loaded") {
+                            window.dispatchEvent(new CustomEvent("unichat:user_store_loaded", { detail: event.data }));
                         } else {
                             window.dispatchEvent(new CustomEvent("unichat:event", { detail: event }));
                         }
