--- a/src/actix/static/index.html.template
+++ b/src/actix/static/index.html.template
@@ -31,21 +31,21 @@
                     const socket = new WebSocket(`${wsSchema}://${wsHost}/ws`)
 
                     socket.addEventListener("open", () => {
-                        window.dispatchEvent(new CustomEvent("unichat:connected"));
+                        console.log("Socket connected");
                     });
 
                     socket.addEventListener("message", (message) => {
                         const event = JSON.parse(message.data);
 
-                        if (event.type === "unichat:history") {
+                        if (event.type === "unichat:connected") {
+                            window.dispatchEvent(new CustomEvent("unichat:connected", { detail: event.data }));
+                        } else if (event.type === "unichat:history") {
                             for (const cachedEvent of event.data) {
                                 window.dispatchEvent(new CustomEvent("unichat:event", { detail: cachedEvent }));
                             }
                         } else if (event.type === "unichat:user_store_update") {
                             window.dispatchEvent(new CustomEvent("unichat:user_store_update", { detail: event.data }));
-                        } else if (event.type === "unichat:user_store_loaded") {
-                            window.dispatchEvent(new CustomEvent("unichat:user_store_loaded", { detail: event.data }));
-                        } else {
+                        } else if (event.type != null && event.data != null) {
                             window.dispatchEvent(new CustomEvent("unichat:event", { detail: event }));
                         }
                     });
@@ -59,6 +59,46 @@
                         console.error("Socket encountered error: ", err.message, "Closing socket");
                         socket.close();
                     });
+
+                    function jsonrpcSendCommand(method, params) {
+                        return new Promise((resolve, reject) => {
+                            const id = crypto.randomUUID();
+                            const body = { jsonrpc: "2.0", id, method, params }
+
+                            socket.send(JSON.stringify(body));
+
+                            function handleResponse(message) {
+                                const event = JSON.parse(message.data);
+
+                                if (event.jsonrpc === "2.0" && event.id === id) {
+                                    socket.removeEventListener("message", handleResponse);
+
+                                    if (event.error) {
+                                        const error = new Error(event.error.message || "Unknown JSON-RPC error");
+                                        error.code = event.error.code;
+                                        error.data = event.error.data;
+                                        reject(error);
+                                    } else {
+                                        resolve(event.result);
+                                    }
+                                }
+                            }
+
+                            socket.addEventListener("message", handleResponse);
+                            setTimeout(() => {
+                                socket.removeEventListener("message", handleResponse);
+                                const error = new Error("Timeout waiting for userstore get response");
+                                error.code = -1;
+                                reject(error);
+                            }, 5000);
+                        });
+                    }
+
+                    globalThis.UniChatAPI = {
+                        getUserstoreItem: async function(key) {
+                            return jsonrpcSendCommand("userstore:get", [key]);
+                        }
+                    }
                 }
 
                 connect();
