fix: userstore event name

--- a/src/actix/static/index.html.template
+++ b/src/actix/static/index.html.template
@@ -43,8 +43,8 @@
                             for (const cachedEvent of event.data) {
                                 window.dispatchEvent(new CustomEvent("unichat:event", { detail: cachedEvent }));
                             }
-                        } else if (event.type === "unichat:user_store_update") {
-                            window.dispatchEvent(new CustomEvent("unichat:user_store_update", { detail: event.data }));
+                        } else if (event.type === "unichat:userstore_update") {
+                            window.dispatchEvent(new CustomEvent("unichat:userstore_update", { detail: event.data }));
                         } else if (event.type != null && event.data != null) {
                             window.dispatchEvent(new CustomEvent("unichat:event", { detail: event }));
                         }
