fix: plugin types to .types

--- a/plugins/.luarc.json
+++ b/plugins/.luarc.json
@@ -1,3 +1,6 @@
 {
-    "workspace.library": ["./types"]
+    "runtime": {
+        "version": "Lua 5.4"
+    },
+    "workspace.library": [".types"]
 }
