--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ custom-protocol = ["tauri/custom-protocol"]
 
 [build-dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
+serde_json = { version = "1.0.149", features = ["preserve_order"] }
 tauri-build = { version = "2.5.3", features = [] }
 ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }
 
@@ -35,7 +35,7 @@ rand = "0.9.2"
 regex = "1.12.2"
 semver = "1.0.27"
 serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
+serde_json = { version = "1.0.149", features = ["preserve_order"] }
 serde_plain = "1.0.2"
 serde-saphyr = "0.0.14"
 tauri = { version = "2.9.5", features = ["native-tls"] }
