--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,4 @@ tauri-plugin-store = "2.4.2"
 tokio = { version = "1.49.0", features = ["full"] }
 ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }
 url = { version = "2.5.7", features = ["serde"] }
+indexmap = { version = "2.13.0", features = ["serde"] }
