--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -116,15 +116,15 @@ jobs:
         working-directory: ${{ env.TAURI_FRONTEND_PATH }}
         run: pnpm install --frozen-lockfile
 
-      - name: Build webapp
-        working-directory: ${{ env.TAURI_FRONTEND_PATH }}
-        run: pnpm build:ui
-
       - name: Cache webapp dist
         uses: actions/cache@v4.2.3
         with:
           path: ${{ env.TAURI_FRONTEND_PATH }}/dist
           key: dist-${{ github.run_id }}
+
+      - name: Build webapp
+        working-directory: ${{ env.TAURI_FRONTEND_PATH }}
+        run: pnpm build:ui
 
   rust-install-dependencies:
     runs-on: ${{ matrix.os }}
@@ -163,11 +163,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
 
-      - name: Download webapp artifact
-        uses: actions/download-artifact@v5.0.0
+      - name: Retrieve webapp dist cache
+        uses: actions/cache@v4.2.3
         with:
-          name: webapp-dist
           path: ${{ env.TAURI_FRONTEND_PATH }}/dist
+          key: dist-${{ github.run_id }}
 
       - name: Setup tauri dependencies
         run: |
@@ -270,11 +270,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
 
-      - name: Download webapp artifact
-        uses: actions/download-artifact@v5.0.0
+      - name: Retrieve webapp dist cache
+        uses: actions/cache@v4.2.3
         with:
-          name: webapp-dist
           path: ${{ env.TAURI_FRONTEND_PATH }}/dist
+          key: dist-${{ github.run_id }}
 
       - name: Setup tauri dependencies
         if: matrix.os == 'ubuntu-24.04'
@@ -339,6 +339,12 @@ jobs:
       - name: Print revision
         run: echo "Revision is ${{ steps.setup_version.outputs.revision }}"
 
+      - name: Cache build artifacts
+        uses: actions/cache@v4.2.3
+        with:
+          path: dist/${{  matrix.os }}
+          key: dist-${{ github.run_id }}-${{ matrix.os }}
+
       - name: Create build artifacts
         run: |
           export VERSION="${{ steps.setup_version.outputs.revision }}"
@@ -355,12 +361,6 @@ jobs:
               (cd "$folder" && for file in ./*; do sha256sum "$file" > "${file}.sha256"; done)
             fi
           done
-
-      - name: Cache build artifacts
-        uses: actions/cache@v4.2.3
-        with:
-          path: dist/${{  matrix.os }}
-          key: dist-${{ github.run_id }}-${{ matrix.os }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4.6.2
