--- a/webapp/package.json
+++ b/webapp/package.json
@@ -39,6 +39,7 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "semver": "7.7.3",
+        "source-map": "0.7.6",
         "styled-components": "6.3.1"
     },
     "devDependencies": {
@@ -65,12 +66,14 @@
         "eslint-plugin-react-hooks": "7.0.1",
         "eslint-plugin-vitest": "0.5.4",
         "jsdom": "27.4.0",
+        "magic-string": "0.30.21",
         "postcss": "8.5.6",
         "postcss-preset-mantine": "1.18.0",
         "postcss-simple-vars": "7.0.1",
         "prettier": "3.7.4",
         "typescript": "5.9.3",
         "vite": "7.3.1",
+        "vite-plugin-static-copy": "3.1.5",
         "vitest": "4.0.16"
     }
 }
