--- a/webapp/package.json
+++ b/webapp/package.json
@@ -40,6 +40,7 @@
         "react-dom": "18.3.1",
         "semver": "7.7.3",
         "source-map": "0.7.6",
+        "stacktrace-js": "2.0.2",
         "styled-components": "6.3.1"
     },
     "devDependencies": {
