--- a/webapp/package.json
+++ b/webapp/package.json
@@ -39,6 +39,8 @@
         "react": "18.3.1",
         "react-dom": "18.3.1",
         "semver": "7.7.3",
+        "source-map": "0.6.1",
+        "stacktrace-js": "2.0.2",
         "styled-components": "6.3.8"
     },
     "devDependencies": {
