--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ anyhow = { version = "1.0.100", features = ["backtrace"] }
 base64 = "0.22.1"
 futures = "0.3.31"
 if-addrs = "0.14.0"
+indexmap = { version = "2.13.0", features = ["serde"] }
 infer = "0.19.0"
 log = "0.4.29"
 mime_guess = "2.0.5"
@@ -41,8 +42,8 @@ tauri = { version = "2.9.5", features = ["native-tls"] }
 tauri-plugin-dialog = "2.6.0"
 tauri-plugin-log = "2.8.0"
 tauri-plugin-opener = "2.5.3"
+tauri-plugin-os = "2.3.2"
 tauri-plugin-store = "2.4.2"
 tokio = { version = "1.49.0", features = ["full"] }
 ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }
 url = { version = "2.5.7", features = ["serde"] }
-indexmap = { version = "2.13.0", features = ["serde"] }
