--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,6 +30,7 @@
         "@tauri-apps/plugin-dialog": "2.6.0",
         "@tauri-apps/plugin-log": "2.8.0",
         "@tauri-apps/plugin-opener": "2.5.3",
+        "@tauri-apps/plugin-os": "2.3.2",
         "@tauri-apps/plugin-store": "2.4.2",
         "clsx": "2.1.1",
         "marked": "17.0.1",
