--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,80 +1,85 @@
 {
     "name": "unichat",
     "private": true,
-    "type": "module",
     "scripts": {
-        "dev:ui": "vite",
-        "build:ui": "vite build",
-        "preview": "vite preview",
-        "lint": "eslint --ext ts,tsx ./src",
-        "test": "vitest"
+        "dev:ui": "webpack serve --config webpack.config.js",
+        "build:ui": "webpack --config webpack.config.js",
+        "build:dev": "babel ./src --out-dir=\"./target\" --config-file=\"./babel.config.js\" --extensions=\".ts,.tsx,.js\" --copy-files --no-copy-ignored",
+        "lint": "eslint --ext .ts,.tsx,.js,.jsx ./src",
+        "test": "jest --passWithNoTests"
     },
     "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
-    "pnpm": {
-        "onlyBuiltDependencies": [
-            "@fortawesome/fontawesome-free",
-            "@swc/core",
-            "esbuild"
-        ]
-    },
     "dependencies": {
         "@fontsource/roboto": "5.2.9",
         "@fontsource/roboto-mono": "5.2.8",
-        "@fortawesome/fontawesome-free": "5.15.4",
-        "@mantine/core": "8.3.13",
-        "@mantine/form": "8.3.13",
-        "@mantine/hooks": "8.3.13",
-        "@mantine/modals": "8.3.13",
-        "@mantine/notifications": "8.3.13",
+        "@fortawesome/fontawesome-free": "7.1.0",
         "@tauri-apps/api": "2.9.1",
         "@tauri-apps/plugin-dialog": "2.6.0",
         "@tauri-apps/plugin-log": "2.8.0",
         "@tauri-apps/plugin-opener": "2.5.3",
         "@tauri-apps/plugin-os": "2.3.2",
         "@tauri-apps/plugin-store": "2.4.2",
+        "bootstrap": "5.3.8",
         "clsx": "2.1.1",
         "marked": "17.0.1",
         "mitt": "3.0.1",
         "polished": "4.3.1",
         "qrcode.react": "4.2.0",
         "react": "18.3.1",
+        "react-bootstrap": "2.10.10",
         "react-dom": "18.3.1",
-        "semver": "7.7.3",
+        "semver": "7.7.4",
         "source-map": "0.6.1",
         "stacktrace-js": "2.0.2",
-        "styled-components": "6.3.8"
+        "styled-components": "6.3.9"
     },
     "devDependencies": {
-        "@swc/plugin-styled-components": "12.3.0",
+        "@babel/cli": "7.28.6",
+        "@babel/core": "7.29.0",
+        "@babel/preset-env": "7.29.0",
+        "@babel/preset-react": "7.28.5",
+        "@babel/preset-typescript": "7.28.5",
         "@testing-library/jest-dom": "6.9.1",
         "@testing-library/react": "16.3.2",
-        "@testing-library/user-event": "14.6.1",
+        "@types/jest": "30.0.0",
         "@types/node": "24.10.0",
         "@types/react": "18.3.18",
         "@types/react-dom": "18.3.5",
         "@types/semver": "7.7.1",
-        "@typescript-eslint/eslint-plugin": "8.53.1",
-        "@typescript-eslint/parser": "8.53.1",
-        "@vitejs/plugin-react-swc": "4.2.2",
+        "@typescript-eslint/eslint-plugin": "8.54.0",
+        "@typescript-eslint/parser": "8.54.0",
+        "@webpack/plugin-copy": "npm:copy-webpack-plugin@13.0.1",
+        "@webpack/plugin-css-minimizer": "npm:css-minimizer-webpack-plugin@7.0.2",
+        "@webpack/plugin-html": "npm:html-webpack-plugin@5.6.4",
+        "@webpack/plugin-mini-css-extract": "npm:mini-css-extract-plugin@2.9.4",
+        "@webpack/plugin-node-polyfill": "npm:node-polyfill-webpack-plugin@4.1.0",
+        "@webpack/plugin-terser": "npm:terser-webpack-plugin@5.3.14",
+        "babel-jest": "30.2.0",
+        "babel-loader": "10.0.0",
+        "babel-plugin-module-resolver": "5.0.2",
+        "babel-plugin-styled-components": "2.1.4",
+        "css-loader": "7.1.3",
         "eslint": "8.57.1",
         "eslint-config-prettier": "10.1.8",
         "eslint-config-standard": "17.1.0",
         "eslint-plugin-import": "2.32.0",
         "eslint-plugin-import-helpers": "1.3.1",
+        "eslint-plugin-jest": "29.12.2",
         "eslint-plugin-n": "16.6.2",
         "eslint-plugin-prettier": "5.5.5",
         "eslint-plugin-promise": "6.6.0",
         "eslint-plugin-react": "7.37.5",
-        "eslint-plugin-react-hooks": "7.0.1",
-        "eslint-plugin-vitest": "0.5.4",
-        "jsdom": "27.4.0",
-        "magic-string": "0.30.21",
-        "postcss": "8.5.6",
-        "postcss-preset-mantine": "1.18.0",
-        "postcss-simple-vars": "7.0.1",
+        "eslint-plugin-react-hooks": "5.2.0",
+        "identity-obj-proxy": "3.0.0",
+        "jest": "30.2.0",
+        "jest-environment-jsdom": "30.2.0",
+        "jsonc-parser": "3.3.1",
         "prettier": "3.8.1",
+        "sass": "1.97.3",
+        "sass-loader": "16.0.7",
         "typescript": "5.9.3",
-        "vite": "7.3.1",
-        "vitest": "4.0.17"
+        "webpack": "5.105.0",
+        "webpack-cli": "6.0.1",
+        "webpack-dev-server": "5.2.3"
     }
 }
