--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,6 +28,7 @@
         "react": "18.3.1",
         "react-bootstrap": "2.10.10",
         "react-dom": "18.3.1",
+        "react-select": "5.10.2",
         "semver": "7.7.4",
         "stacktrace-js": "2.0.2",
         "styled-components": "6.3.9"
