--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,7 +12,7 @@
     "dependencies": {
         "@fontsource/roboto": "5.2.9",
         "@fontsource/roboto-mono": "5.2.8",
-        "@tabler/icons-webfont": "3.36.1",
+        "@fortawesome/fontawesome-free": "5.15.4",
         "@tauri-apps/api": "2.9.1",
         "@tauri-apps/plugin-dialog": "2.6.0",
         "@tauri-apps/plugin-log": "2.8.0",
