--- a/webapp/tsconfig.json
+++ b/webapp/tsconfig.json
@@ -1,4 +1,5 @@
 {
+    "include": ["__tests__", "src", "vite.config.ts"],
     "compilerOptions": {
         /* Visit https://aka.ms/tsconfig to read more about this file */
 
