--- a/webapp/package.json
+++ b/webapp/package.json
@@ -33,6 +33,7 @@
         "react-dom": "18.3.1",
         "react-select": "5.10.2",
         "semver": "7.7.4",
+        "source-map": "0.6.1",
         "stacktrace-js": "2.0.2",
         "styled-components": "6.3.9"
     },
