--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,7 +32,6 @@
         "react-color": "2.19.3",
         "react-dom": "18.3.1",
         "react-select": "5.10.2",
-        "semver": "7.7.4",
         "stacktrace-js": "2.0.2",
         "styled-components": "6.3.9"
     },
@@ -43,8 +42,8 @@
         "@testing-library/user-event": "14.6.1",
         "@types/node": "24.10.0",
         "@types/react": "18.3.18",
+        "@types/react-color": "3.0.13",
         "@types/react-dom": "18.3.5",
-        "@types/semver": "7.7.1",
         "@typescript-eslint/eslint-plugin": "8.54.0",
         "@typescript-eslint/parser": "8.54.0",
         "@vitejs/plugin-react-swc": "4.2.2",
