--- a/webapp/.eslintrc.json
+++ b/webapp/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+    "ignorePatterns": ["!.storybook/**/*"],
     "env": {
         "es2023": true,
         "browser": true
@@ -7,7 +8,8 @@
         "standard",
         "plugin:@typescript-eslint/recommended",
         "plugin:react/recommended",
-        "plugin:prettier/recommended"
+        "plugin:prettier/recommended",
+        "plugin:storybook/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -83,7 +85,6 @@
 
         /* Disable quotes enforcement due to conflict with prettier */
         "quotes": "off",
-
 
         "space-before-function-paren": "off",
 
