--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,7 +7,9 @@
         "build:ui": "NODE_ENV=production vite build",
         "preview": "vite preview",
         "lint": "eslint --ext .ts,.tsx,.js,.jsx ./src",
-        "test": "vitest"
+        "test": "vitest",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build"
     },
     "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
     "dependencies": {
@@ -36,6 +38,8 @@
         "styled-components": "6.3.9"
     },
     "devDependencies": {
+        "@storybook/addon-docs": "^10.2.8",
+        "@storybook/react-vite": "^10.2.8",
         "@swc/plugin-styled-components": "12.3.0",
         "@testing-library/jest-dom": "6.9.1",
         "@testing-library/react": "16.3.2",
@@ -47,6 +51,7 @@
         "@typescript-eslint/eslint-plugin": "8.54.0",
         "@typescript-eslint/parser": "8.54.0",
         "@vitejs/plugin-react-swc": "4.2.2",
+        "@vitest/coverage-v8": "4.0.17",
         "eslint": "8.57.1",
         "eslint-config-prettier": "10.1.8",
         "eslint-config-standard": "17.1.0",
@@ -57,10 +62,12 @@
         "eslint-plugin-promise": "6.6.0",
         "eslint-plugin-react": "7.37.5",
         "eslint-plugin-react-hooks": "5.2.0",
+        "eslint-plugin-storybook": "^10.2.8",
         "eslint-plugin-vitest": "0.5.4",
         "jsdom": "27.4.0",
         "prettier": "3.8.1",
         "rollup-plugin-visualizer": "6.0.5",
+        "storybook": "^10.2.8",
         "typescript": "5.9.3",
         "vite": "7.3.1",
         "vitest": "4.0.17"
