--- a/webapp/package.json
+++ b/webapp/package.json
@@ -8,7 +8,7 @@
         "preview": "vite preview",
         "lint": "eslint --ext .ts,.tsx,.js,.jsx ./src",
         "test": "vitest",
-        "storybook": "storybook dev -p 6006",
+        "storybook": "storybook dev --no-open -p 6006",
         "build-storybook": "storybook build"
     },
     "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
