--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,7 @@
         "@tauri-apps/plugin-opener": "2.5.3",
         "@tauri-apps/plugin-os": "2.3.2",
         "@tauri-apps/plugin-store": "2.4.2",
+        "@uiw/react-color-sketch": "2.9.5",
         "bootstrap": "5.3.8",
         "clsx": "2.1.1",
         "marked": "17.0.1",
@@ -31,7 +32,6 @@
         "qrcode.react": "4.2.0",
         "react": "18.3.1",
         "react-bootstrap": "2.10.10",
-        "react-color": "2.19.3",
         "react-dom": "18.3.1",
         "react-select": "5.10.2",
         "stacktrace-js": "2.0.2",
@@ -46,7 +46,6 @@
         "@testing-library/user-event": "14.6.1",
         "@types/node": "24.10.0",
         "@types/react": "18.3.18",
-        "@types/react-color": "3.0.13",
         "@types/react-dom": "18.3.5",
         "@typescript-eslint/eslint-plugin": "8.54.0",
         "@typescript-eslint/parser": "8.54.0",
