--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,15 +3,15 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev:ui": "NODE_ENV=development vite",
-        "build:ui": "NODE_ENV=production vite build",
+        "dev:ui": "cross-env NODE_ENV=development vite",
+        "build:ui": "cross-env NODE_ENV=production vite build",
         "preview": "vite preview",
         "lint": "eslint --ext .ts,.tsx,.js,.jsx ./src",
         "test": "vitest",
         "storybook": "storybook dev --no-open -p 6006",
         "build-storybook": "storybook build"
     },
-    "packageManager": "pnpm@10.7.1+sha512.2d92c86b7928dc8284f53494fb4201f983da65f0fb4f0d40baafa5cf628fa31dae3e5968f12466f17df7e97310e30f343a648baea1b9b350685dafafffdf5808",
+    "packageManager": "pnpm@10.30.3",
     "dependencies": {
         "@fontsource/roboto": "5.2.9",
         "@fontsource/roboto-mono": "5.2.8",
@@ -51,6 +51,7 @@
         "@typescript-eslint/parser": "8.54.0",
         "@vitejs/plugin-react-swc": "4.2.2",
         "@vitest/coverage-v8": "4.0.17",
+        "cross-env": "10.1.0",
         "eslint": "8.57.1",
         "eslint-config-prettier": "10.1.8",
         "eslint-config-standard": "17.1.0",
